# Backend

./: .env.example  .gitignore  CLAUDE.md  README.md  Youtube_demo.md  cue-5-day-ai-agents-intensive-vibe-coding-cours.ipynb  pyproject.toml  requirements.txt
.claude/skills/kaggle-writeup/: SKILL.md
.claude/skills/plan-feature/: SKILL.md
.claude/skills/qa-review/: SKILL.md
.claude/skills/rag-endpoint/: SKILL.md
.github/workflows/: ci.yml
MeetingMinute/: 21_6_2026.md
app/: __init__.py  main.py
app/agents/: __init__.py  orchestrator.py
app/api/: __init__.py  websocket.py
app/api/routes/: chat.py  documents.py  voice.py
app/core/: __init__.py  config.py
app/models/: __init__.py  schemas.py
app/services/documents/: __init__.py  processor.py
app/services/rag/: __init__.py  engine.py
app/services/signals/: __init__.py  detector.py
app/services/voice/: __init__.py
context/: active-tasks.md  decisions-log.md  glossary.md  progress.md
docs/: README.md
docs/00-product/: PRD.md
docs/01-architecture/: system-design.md  tech-stack.md
docs/01-architecture/adr/: ADR-000-template.md
docs/02-engineering/: conventions.md  rescue-prompt.md
docs/03-agents/: loop-overview.md
docs/04-delivery/: demo-script.md  kaggle-submission.md  roadmap.md
docs/05-context-engineering/: playbook.md
docs/api/: rest-endpoints.md
docs/architecture/: agent-architecture.md  data-flow.md  system-overview.md
docs/guides/: getting-started.md
docs/skills/: installed-skills.md
docs/templates/: meeting-template.md
frontend/: index.html
samples/aurorabuds/: 01-aurorabuds-spec.txt  02-aurorabuds-faq.txt  03-aurorabuds-campaign.txt  RUNBOOK.md  prepared-script.txt
src/cue/: __init__.py  config.py  main.py
src/cue/api/: __init__.py  app.py  errors.py
src/cue/api/routes/: __init__.py  (+5 more)
src/cue/ingestion/: __init__.py  errors.py  models.py  parsers.py  service.py
src/cue/rag/: __init__.py  chunking.py  embeddings.py  index.py  models.py  store.py
src/cue/rescue/: __init__.py  formatting.py  generator.py  models.py  prompt.py  service.py
src/cue/sessions/: __init__.py  errors.py  models.py  service.py  store.py
src/cue/transcript/: __init__.py  buffer.py  models.py  service.py
src/cue/triggers/: __init__.py  engine.py  slip.py
tests/: conftest.py  sample_docs.py  test_config.py  test_documents_api.py  test_health.py  test_ingestion.py  test_rag.py  test_rescue.py  test_sessions.py  test_slip.py  test_transcript.py  test_triggers.py  test_ui.py
tests/eval/: grounding.jsonl  run_eval.py
tests/unit/: test_api.py  test_signal_detector.py
