[project]
name = "cue"
version = "0.1.0"
description = "Cue — real-time presentation rescue agent (backend). Grounded rescue scripts from your own documents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Core runtime deps. Heavier RAG/parsing deps land as features do (D2-D3),
# kept in optional groups below so the D1 skeleton stays light & reproducible.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",  # multipart uploads (POST /documents, D2)
]

[project.optional-dependencies]
# RAG + Gemini (wired D3-D4)
rag = [
    "google-genai>=0.3",
    "chromadb>=0.5",
]
# Document parsers (wired D2)
parsers = [
    "pypdf>=4.2",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "ebooklib>=0.18",
]
# Dev / QA toolchain
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",  # FastAPI TestClient
    "ruff>=0.5",
]

[project.scripts]
cue = "cue.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# --- Tooling ---------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, pyupgrade, comprehensions
select = ["E", "F", "I", "B", "UP", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["cue"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency/param markers are called in argument defaults by design.
extend-immutable-calls = [
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Depends",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q"
